implementa jest para get all accounts
